ACPI: skip boot interrupt rerouting when index is zero

When checking for boot interrupts and PRT index is zero avoid doing
any interrupt rerouting since the code currently does not handle
determining the IRQ via _CRS method.

Fixes:
https://bugzilla.kernel.org/show_bug.cgi?id=43074

Signed-off-by: Stefan Assmann <sassmann@kpanic.de>